Simplify and fix producer error